--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "employee-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "management.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node management.js",
-    "watch": "nodemon management.js"
+    "start": "node app.js",
+    "watch": "nodemon app.js"
   },
   "repository": {
     "type": "git",
